prepare merge master-vestitino

--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -18,129 +18,126 @@
       body {behavior: url(<%= stylesheet_path "csshover.htc" %>);}
     </style>
 <![endif]-->
-<%# call_hook :view_layouts_editorial_html_head %>
+<%= call_hook :view_layouts_editorial_html_head %>
 <!-- page specific tags -->
 <%= yield :header_tags -%>
 </head>
 <body class="<%=h body_css_classes %>">
-<div id="fs-main">
-        <div class="cleared reset-box"></div>
-  <div id="contenitore-top">
-        <div id="fs-top-menu">
-            <div id="account">
-                <%= render_menu :account_menu %>
-            </div>
+  <div id="fs-main">
+
+    <div id="contenitore-top">
+      <div id="fs-top-menu">
+        <%# page_header_title %>
+        <div id="account">
+          <%= render_menu :account_menu %>
         </div>
-  </div>
-        <%# header intestazione e menu %>
-        <%#render 'header' %>
-<%#      inizio                               pagina_dei_contenuti                inizio             %>
-<%# PAGINA --->>> FRONT END intestazione e menu %>
-<div class="fs-header">
-    <div class="fs-header-position">
+      </div>
+    </div>
+      
+    <%# header intestazione e menu %>
+    <%#render 'header' %>
+    <div class="fs-header">
+
+      <div class="fs-header-position">
         <div class="fs-header-wrapper">
-            <div class="cleared reset-box"></div>
-            <div class="fs-header-inner">
-                <div class="fs-logo">
-                    <div class="fs-logo-name" >
-                      <div class="fs-logo-img"></div>
-                    </div>
-
-
-                        <h4 class="fs-logo-text">professionisti esperti in materie fiscali sportive</h4>
-</div>
-
+          <div class="cleared reset-box"></div>
+          <div class="fs-header-inner">
+            <div class="fs-logo">
+              <div class="fs-logo-name" >
+                <div class="fs-logo-img"></div>
+              </div>
+              <h4 class="fs-logo-text">professionisti esperti in materie fiscali sportive</h4>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <div class="fs-bar fs-m1nav">
+      <div class="fs-bar fs-m1nav">
         <div class="fs-m1nav-outer">
-            <div class="fs-m1nav-wrapper">
-                <div class="fs-m1nav-inner">
-
-                    <%# render_navigation :context => :fe , :level => 1 %>
-
-                    <%= render_navigation(:level => 1) %>
-
-                </div>
+          <div class="fs-m1nav-wrapper">
+            <div class="fs-m1nav-inner">
+              <%# render_navigation :context => :fe , :level => 1 %>
+              <%= render_navigation(:level => 1) %>
             </div>
+          </div>
         </div>
-    </div>
-    <div class="fs-bar fs-m2nav">
+      </div>
+
+      <div class="fs-bar fs-m2nav">
         <div class="fs-m2nav-wrapper">
-
-            <%# render_navigation :context => :fe , :level => 2%>
-            <%= render_navigation  :level => 2  %>
-
+          <%# render_navigation :context => :fe , :level => 2%>
+          <%= render_navigation  :level => 2  %>
         </div>
-    </div>
+      </div>
+  
+      <div class="cleared reset-box"></div>
+    </div><%#fs-header%>
     <div class="cleared reset-box"></div>
 
-</div>
-<div class="cleared reset-box"></div>
-<%# --->>> I CONTENUTI --->>> FRONT END  %>
-<div class="fs-box fs-sheet">
-    <div class="fs-box-body fs-sheet-body">
+
+
+    <%# --->>> I CONTENUTI --->>> FRONT END  %>
+    <div class="fs-box fs-sheet">
+      <div class="fs-box-body fs-sheet-body">
         <div class="fs-layout-wrapper">
-            <div class="fs-content-layout">
-                <div class="fs-content-layout-row">
-                    <div class="fs-layout-cell fs-content">
-                        <div class="fs-box fs-post">
-                            <div class="fs-box-body fs-post-body">
-                                <div class="fs-post-inner fs-article">
-                                   <h2> questo è il posto degli articoli</h2>
-                                        <%#h2 class="fs-postheader"><span class="fs-postheadericon">Page 1
-                                        </span></h2> %>
-
-                                    <div class="fs-postcontent">
-                                        <div class="fs-content-layout">
-                                            <div class="fs-content-layout-row">
-                                                <div class="fs-layout-cell layout-item-0" style="width: 100%;">
-                                                   <h2> questo è il posto degli articoli</h2>
-                                                  <%#>Enter Page content here...%>
-                                                    <%#	yield %>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="fs-content-layout">
-                                        <div class="fs-content-layout-row">
-                                    </div>
-                        </div>
-                                    </div>
-                                    <div class="cleared"></div>
-                                </div>
-		                        <div class="cleared"></div>
+          <div class="fs-content-layout">
+            
+            <div class="fs-content-layout-row">
+              
+              <div class="fs-layout-cell fs-content">
+                <div class="fs-box fs-post">
+                  <div class="fs-box-body fs-post-body">
+                    <div class="fs-post-inner fs-article">
+                      <div class="fs-postcontent">
+                        <div class="fs-content-layout">
+                          <div class="fs-content-layout-row">
+                            <div class="fs-layout-cell layout-item-0" style="width: 100%;">
+                              <%#>Enter Page content here...%>
+                              <%=	yield %>
                             </div>
+                          </div>
                         </div>
-                        <div class="cleared"></div>
-                    </div>
-                        <%#sidebar a centro destra %>
-                        <%# render 'blocco_sidebar1' %>
 
-                        <%#sidebar a destra %>
-                        <%=	render :partial => 'blocco_sidebar2' %>
+                        <div class="fs-content-layout">
+                          <div class="fs-content-layout-row">
+
+                            <div id="main-menu fs_box_opacity">
+                              <%= render_menu :application_menu_fs %>
+                            </div>
+
+                          </div>
+                        </div>
+
+                      </div><%#fs-postcontent%>
+                      <div class="cleared"></div>
+                    </div>
+                    <div class="cleared"></div>
+                  </div>
                 </div>
-            </div>
+                <div class="cleared"></div>
+              </div><%#fs-layout-cell fs-content%>
+
+              <%#sidebar a centro destra %>
+              <%# render 'blocco_sidebar1' %>
+              <%#sidebar a destra %>
+              <%=	render :partial => 'blocco_sidebar2' %>
+
+            </div><%#fs-content-layout-row%>
+          </div>
         </div>
         <div class="cleared"></div>
 
-        <%# render :partial => 'footer' %>
         <%= render :partial => 'footer' %>
-
         <div class="cleared"></div>
+
+      </div><%#fs-box-body fs-sheet-body%>
+    
     </div>
-</div>
-<div class="cleared"></div>
-
-
-
- <%# fine pagina_dei_contenuti  %>
-       <div class="cleared reset-box"></div>
-        <div class="cleared"></div>
-</div>
-
+    <div class="cleared reset-box"></div>
+    <%# fine pagina_dei_contenuti  %>
+  
+  
+  </div> <%#fs-main%>
 
 </body>
 </html>
