--- a/app/views/editorial/_blocco_ricerca.erb
+++ b/app/views/editorial/_blocco_ricerca.erb
@@ -1,27 +1,38 @@
 <div class="fs-box fs-block">
-    <div class="fs-box-body fs-block-body">
-        <div class="fs-bar fs-blockheader">
-
-                    <h3 class="t">Ricerca</h3>
-
-        </div>
-            <div class="fs-box fs-blockcontent">
-                <div class="fs-box-body fs-blockcontent-body">
-                <div>
-                <form method="get" name="searchform" action="#">
-                    <input type="text" value="" name="s" style="width: 95%;" />
-                    <span class="fs-button-wrapper">
-                    <span class="fs-button-l"> </span>
-                    <span class="fs-button-r"> </span>
-                    <a class="fs-button" href="javascript:void(0)">Search</a>
-                    </span>
-                </form> 
-
-
-            </div>
-            <div class="cleared"></div>
-        </div>
+  <div class="fs-box-body fs-block-body">
+    
+    <div class="fs-bar fs-blockheader">
+      <h3 class="t">Ricerca</h3>
     </div>
-	<div class="cleared"></div>
+
+    <div class="fs-box fs-blockcontent">
+      <div class="fs-box-body fs-blockcontent-body">
+      
+        <form method="get" name="searchform" action="#">
+          <input type="text" value="" name="s" style="width: 95%;" />
+                      <span class="fs-button-wrapper">
+          <span class="fs-button-l"> </span>
+          <span class="fs-button-r"> </span>
+          <a class="fs-button" href="javascript:void(0)">Search</a>
+          </span>
+        </form> 
+
+        <% if User.current.logged? || !Setting.login_required? %>
+        <div id="quick-search">
+            <% form_tag({:controller => 'editorial', :action => 'ricerca', :id => @project}, :method => :get ) do %>
+            <%= hidden_field_tag(controller.default_search_scope, 1, :id => nil) if controller.default_search_scope %>
+            <label for='q'>
+              <%= link_to l(:label_search), {:controller => 'editorial', :action => 'ricerca', :id => @project}, :accesskey => accesskey(:search) %>:
+            </label>
+            <%= text_field_tag 'q', @question, :size => 20, :class => 'small', :accesskey => accesskey(:quick_search) %>
+            <% end %>
+            <%= render_project_jump_box_fs %>
+        </div>
+        <% end %>
+      
+      </div>
+      <div class="cleared"></div>
     </div>
+    <div class="cleared"></div>
+  </div>
 </div>
