--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -7,10 +7,32 @@
 <meta name="keywords" content="editoriale, notizie sport, fiscale, info, fiscosport" />
 <%= csrf_meta_tag %>
 <%= favicon %>
-<%= stylesheet_link_tag 'application', :media => 'all' %>
+<%# stylesheet_link_tag 'application', :media => 'all' %>
+<%= stylesheet_link_tag 'application_fs', :media => 'all' %>
 <%= stylesheet_link_tag 'editorial', :media => 'all' %>
 <%= stylesheet_link_tag 'rtl', :media => 'all' if l(:direction) == 'rtl' %>
-<%= javascript_heads %>
+<%# javascript_heads %>
+
+<%# jquery %>
+<%= stylesheet_link_tag 'jquery/redmond/jquery-ui-1.8.23.custom.css', :media => 'all' %>
+<%= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
+<%= javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
+<%# superfish %>
+<%= stylesheet_link_tag 'superfish-1.4.8/superfish.css', :media => 'screen' %>
+<%= stylesheet_link_tag 'superfish-1.4.8/superfish-navbar.css', :media => 'all' %>
+<%= stylesheet_link_tag 'superfish-1.4.8/superfish-vertical.css', :media => 'all' %>
+<%# javascript_include_tag "superfish-1.4.8/jquery-1.2.6.min.js" %>
+<%= javascript_include_tag "superfish-1.4.8/hoverIntent.js" %>
+<%= javascript_include_tag "superfish-1.4.8/superfish.js" %>
+
+		<script type="text/javascript">
+			$(function(){
+		    // initialise plugins
+		    $(".fs-m1hmenu").superfish();
+		    $("#main-menu ul").superfish();
+			});
+		</script>
+
 <%= heads_for_theme %>
 <!--[if IE 6]>
     <style type="text/css">
@@ -98,16 +120,6 @@
                           </div>
                         </div>
 
-                        <div class="fs-content-layout">
-                          <div class="fs-content-layout-row">
-
-                            <div id="main-menu fs_box_opacity">
-                              <%= render_menu :application_menu_fs %>
-                            </div>
-
-                          </div>
-                        </div>
-
                       </div><%#fs-postcontent%>
                       <div class="cleared"></div>
                     </div>
@@ -138,6 +150,11 @@
   
   
   </div> <%#fs-main%>
+  <div id="header">
+    <div id="main-menu" class="fs_box_opacity">
+      <%= render_menu :application_menu_fs %>
+    </div>
+  </div>
 
 </body>
 </html>
