--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -150,6 +150,7 @@
   
   
   </div> <%#fs-main%>
+  <div id="ajax-indicator" style="display:none;"><span><%= l(:label_loading) %></span></div>
   <div id="header">
     <div id="main-menu" class="fs_box_opacity">
       <%= render_menu :application_menu_fs %>
