--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -154,6 +154,8 @@
   <div id="header">
     <div id="main-menu" class="fs_box_opacity">
       <%= render_menu :application_menu_fs %>
+      <br />
+      <%= render_menu :footer_menu_fs %>
     </div>
   </div>
 
