--- a/app/views/editorial/sezione.html.erb
+++ b/app/views/editorial/sezione.html.erb
@@ -7,4 +7,34 @@
     <li>LINK: all'edizione</li>
     <li>LINK: al singolo articolo</li>
   </ul> 
-<h1> id = <%= @id %> </h1>
+<h3> id = <%= @id %> </h3>
+<div id="fs_informa" class="nodata"><p>
+  <%= @sezione  %> :: <%= @sottosezione %>
+</p></div>
+<br />
+<%= link_to("link alla sessione", sezione_path(@id)) %>
+<br />
+<%= link_to("link alla sessione (bis)", :controller => 'editorial', :action => 'sezione', :id =>@id) %>
+<br />
+<% if @issues && @issues.any? %>
+  <h3><%=l(:label_issues_by_section)%></h3>
+  <div class="issues box">
+    Totale articoli: <b><%= @issues.count %></b>
+    <br />
+    <% for articolo in @issues %>
+      <%= render :partial => 'articolo_teaser', :locals => { :articolo => articolo } %>
+    <% end %>
+    <br />
+    <%= link_to l(:label_issues_view_all), :action => 'articoli' %>
+  </div>
+<% else %>
+  <p class="nodata"><%= l(:label_no_data) %></p>
+<% end %>
+
+
+autore 
+sezione
+sottosezione
+elipsis descrizione
+avatar
+
