--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1042,3 +1042,19 @@ h2 img { vertical-align:middle; }
   overflow:hidden;
 }
 
+/*Fee Roles*/
+.registrato{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px;}
+.abbonato{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px;}
+.inscadenza{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; }
+.espirato{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; font-style: italic; }
+.archivied{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; font-style: italic; }
+
+.redattore{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; }
+.power_user{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; }
+.modified{
+    box-shadow: 0 0 5px 0 red;
+    -webkit-box-shadow: 0 0 5px 0 red;
+    -moz-box-shadow: 0 0 5px 0 red;
+}
+.unchanged{font-size: 50%;}
+
