Verify user from old database

--- a/app/views/editorial/sezione.html.erb
+++ b/app/views/editorial/sezione.html.erb
@@ -10,6 +10,13 @@
 <h3> id = <%= @id %> </h3>
 <div id="fs_informa" class="nodata"><p>
   <%= @sezione  %> :: <%= @sottosezione %>
+  <br />
+  TOP SECTION: <%= @top_section  %>
+  <br />
+  test: <%= @test  %>
+  <br />
+  issues2: <%= @issues2  %>
+  
 </p></div>
 <br />
 <%= link_to("link alla sessione", sezione_path(@id)) %>
