fatta la pagina articoli che verr visualizzata nella home

--- a/app/views/editorial/_blocco_sidebar1.erb
+++ b/app/views/editorial/_blocco_sidebar1.erb
@@ -1,4 +1,12 @@
 <div class="fs-layout-cell fs-sidebar1">
   <%#= render :partial => 'blocco_vmenu'  %>
+
+  <h4> posto per pubblicità e banners </h4>
+    <img src="images/fs-logo2.png" alt="">
+   <hr>
+  <img src="images/rails.png" alt="">
+   <hr>
+  <img src="images/fs-logo1.png" alt="">
+  oppure posto per link veloci ecc
   <%#   <div class="cleared"></div>%>
 </div>
