--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1042,13 +1042,12 @@ h2 img { vertical-align:middle; }
   overflow:hidden;
 }
 
-/*Fee Roles*/
+/*State Fee Roles*/
 .registrato{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px;}
 .abbonato{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px;}
 .inscadenza{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; }
 .espirato{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; font-style: italic; }
 .archivied{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; font-style: italic; }
-
 .redattore{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; }
 .power_user{background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; }
 .modified{
@@ -1057,4 +1056,14 @@ h2 img { vertical-align:middle; }
     -moz-box-shadow: 0 0 5px 0 red;
 }
 .unchanged{font-size: 50%;}
+/*Action Fee Roles*/
+.icon-man { background-image: url(../images/delete.png); }
+.icon-auth { background-image: url(../images/delete.png); }
+.icon-vip { background-image: url(../images/delete.png); }
+.icon-abbo { background-image: url(../images/delete.png); }
+.icon-reg { background-image: url(../images/delete.png); }
+.icon-renew { background-image: url(../images/delete.png); }
+.icon-exp { background-image: url(../images/delete.png); }
+.icon-arc { background-image: url(../images/delete.png); }
+
 
