--- a/app/views/editorial/articoli.html.erb
+++ b/app/views/editorial/articoli.html.erb
@@ -9,7 +9,11 @@
                           <div class="art-contenitore">
 
                         <h5 class="fs-postheader" > <%= articolo.titolo %>  </h5>
-                      <div class="fs-postheadericons "><%= articolo.section  %> <br />
+                      <div class="fs-postheadericons ">
+                      <%= articolo.top_section  %> (<%= articolo.section.top_section.id  %>)<br />
+                      <%= articolo.section  %> (<%= articolo.section.id  %>)<br />
+                       <br />
+                      Numero di articoli della sezione <%= articolo.section.issues.count  %> <br />
                         <%# avatar articolo.author_id, :size => "50" %> <%=h articolo.author %>
                       </div>
                         <br />
