Simple navigation dynamicaly

--- a/app/views/editorial/top_menu.html.erb
+++ b/app/views/editorial/top_menu.html.erb
@@ -8,7 +8,8 @@
   </ul> 
 <h3> id = <%= @id %> </h3>
 <div id="fs_informa" class="nodata"><p>
-  <%= @sezione  %> :: <%= @sottosezione %>
+  <%= @top_menu  %><br />
+  <%= @top_sections.count %><br />
 </p></div>
 <br />
 
