--- a/app/views/editorial/sezione.html.erb
+++ b/app/views/editorial/sezione.html.erb
@@ -1,47 +1,36 @@
-<h2><%=l(:details_sezione)%></h2>
-  In questa pagina:
-  <ul> 
-    <li>Summary e definizione della sezione</li>
-    <li>Lista articoli correlati</li>
-    <li>Filtraggio sul contenuto</li>
-    <li>LINK: all'edizione</li>
-    <li>LINK: al singolo articolo</li>
-  </ul> 
-<h3> id = <%= @id %> </h3>
-<div id="fs_informa" class="nodata"><p>
-  <%= @sezione  %> :: <%= @sottosezione %>
-  <br />
-  TOP SECTION: <%= @top_section  %>
-  <br />
-  test: <%= @test  %>
-  <br />
-  issues2: <%= @issues2  %>
-  
-</p></div>
-<br />
-<%= link_to("link alla sessione", sezione_path(@id)) %>
-<br />
-<%= link_to("link alla sessione (bis)", :controller => 'editorial', :action => 'sezione', :id =>@id) %>
-<br />
-<% if @issues && @issues.any? %>
-  <h3><%=l(:label_issues_by_section)%></h3>
-  <div class="issues box">
-    Totale articoli: <b><%= @issues.count %></b>
-    <br />
-    <% for articolo in @issues %>
-      <%= render :partial => 'articolo_teaser', :locals => { :articolo => articolo } %>
-    <% end %>
-    <br />
-    <%= link_to l(:label_issues_view_all), :action => 'articoli' %>
-  </div>
-<% else %>
-  <p class="nodata"><%= l(:label_no_data) %></p>
-<% end %>
+<div class="fs-post-inner fs-article">
+    <div class="fs-postcontent">
+        <div class="fs-content-layout-wrapper layout-item-0">
+            <div class="fs-content-layout">
+                <div class="fs-content-layout-row">
+                    <div class="fs-layout-cell layout-item-1">
 
+                        <% @issues.each do |articolo| %>
+                          <div class="art-contenitore">
 
-autore 
-sezione
-sottosezione
-elipsis descrizione
-avatar
+                        <h5 class="fs-postheader" > <%= articolo.titolo %>  </h5>
+                      <div class="fs-postheadericons ">
+                      <%= articolo.top_section  %> (<%= articolo.section.top_section.id  %>)<br />
+                      <%= articolo.section  %> (<%= articolo.section.id  %>)<br />
+                       <br />
+                      Numero di articoli della sezione <%= articolo.section.issues.count  %> <br />
+                        <%# avatar articolo.author_id, :size => "50" %> <%=h articolo.author %>
+                      </div>
+                        <br />
+                      <div class="fs-postcontent" >   <%= articolo.riassunto %>
+                      </div>
 
+                              <span class="fs-button-wrapper">
+                              <span class="fs-button-l"> </span>
+                              <span class="fs-button-r"> </span>
+                                      <%= link_to "Leggi >>> " ,  { :controller => 'issues', :action => 'show', :id => articolo.id }, :class => "fs-button" %>
+                            </span>
+                            <br /></div>
+                        <% end %>
+                    </div>
+                 </div>
+            </div>
+        </div>
+    </div>
+ <div class="cleared"></div>
+</div>
