--- a/app/views/editorial/sezione.html.erb
+++ b/app/views/editorial/sezione.html.erb
@@ -33,4 +33,5 @@
         </div>
     </div>
  <div class="cleared"></div>
+  <p class="pagination"><%= pagination_links_full @issues_pages, @issues_count %></p>
 </div>
