--- a/app/views/editorial/top_menu.html.erb
+++ b/app/views/editorial/top_menu.html.erb
@@ -4,7 +4,6 @@
             <div class="fs-content-layout">
                 <div class="fs-content-layout-row">
                     <div class="fs-layout-cell layout-item-1">
-
                         <% @issues.each do |articolo| %>
                           <div class="art-contenitore">
 
@@ -45,4 +44,6 @@
         </div> -->
    </div>
  <div class="cleared"></div>
+
+ <p class="pagination"><%= pagination_links_full @issues_pages, @issues_count %></p>
 </div>
