--- a/app/views/editorial/home.html.erb
+++ b/app/views/editorial/home.html.erb
@@ -16,8 +16,8 @@
         <div class="fs-content-layout">
           <div class="fs-content-layout-row">
             <div class="fs-layout-cell layout-item-0" style="width: 100%">
-              <h3 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px"><span
-              style="color: #245823;"><%= articolo.titolo %></span></h3>
+              <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
+              <%= articolo.titolo %></h4>
               Menu:  <%= articolo.top_section %>  (<%= articolo.section.top_section.id %>)<br/>
               Sezione  <%= articolo.section %> (<%= articolo.section.id %>)<br/>
               <br/>
