--- a/app/views/editorial/top_menu.html - Copia.erb
+++ b/app/views/editorial/top_menu.html - Copia.erb
@@ -1,13 +1,9 @@
-
-
-
 <div class="fs-post-inner fs-article">
     <div class="fs-postcontent">
         <div class="fs-content-layout-wrapper layout-item-0">
             <div class="fs-content-layout">
                 <div class="fs-content-layout-row">
                     <div class="fs-layout-cell layout-item-1">
-
                         <% @issues.each do |articolo| %>
                           <div class="art-contenitore">
 
@@ -34,7 +30,20 @@
                  </div>
             </div>
         </div>
-    </div>
+           <!--
+            <div class="fs-content-layout-wrapper layout-item-0">
+                <div class="fs-content-layout">
+                    <div class="fs-content-layout-row">
+                        <div class="fs-layout-cell layout-item-1" style="width: 50%;">
+                <p><br /></p>
+            </div><div class="fs-layout-cell layout-item-1" style="width: 50%;">
+                <p><br /></p>
+            </div>
+            </div>
+        </div>
+        </div> -->
+   </div>
  <div class="cleared"></div>
-  <p class="pagination"><%= pagination_links_full @issues_pages, @issues_count %></p>
+
+ <p class="pagination"><%= pagination_links_full @issues_pages, @issues_count %></p>
 </div>
